Refactor project structure and update dependencies
- Removed obsolete files.
- Changed module entry point in `package.json` from `index.ts` to `src/cli.ts`.
- Updated build and start scripts in `package.json` for improved functionality.
- Enhanced `Animation` class in `src/animation.ts` for better frame processing.
- Refactored `src/cli.ts` to improve animation rendering and terminal handling.
- Updated `README.md` with installation and usage instructions.
- Adjusted TypeScript configuration in `tsconfig.json` for stricter checks and no emit.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,24 +5,17 @@
     "module": "ESNext",
     "moduleDetection": "force",
     "allowJs": true,
-
-    // Output configuration
-    "outDir": "./dist",
     "moduleResolution": "bundler",
-    "noEmit": false,
-    "declaration": true,
-
-    // Best practices
+    "allowImportingTsExtensions": true,
+    "verbatimModuleSyntax": true,
+    "noEmit": true,
     "strict": true,
     "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true,
-
-    // Some stricter flags
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
+    "noPropertyAccessFromIndexSignature": false,
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
