--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ghostty",
   "version": "1.0.0",
   "description": "Ghostty Terminal Animation",
-  "module": "index.ts",
+  "module": "src/cli.ts",
   "type": "module",
   "bin": {
     "ghostty": "./dist/cli.js"
@@ -11,10 +11,12 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/cli.js"
+    "build": "bun build ./src/cli.ts --outdir=dist --target=node --minify",
+    "start": "bun dist/cli.js",
+    "dev": "bun run ./src/cli.ts"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@types/bun": "latest",
     "typescript": "^5.0.0"
   }
