Update package.json for version 2.0.0 release
- Bump version from 1.0.0 to 2.0.0.
- Add "prepare" script to build before publishing.
- Include additional metadata: keywords, license, repository, bugs, homepage, and author information.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ghostty",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Ghostty Terminal Animation",
   "module": "src/cli.ts",
   "type": "module",
@@ -11,6 +11,7 @@
     "dist"
   ],
   "scripts": {
+    "prepare": "bun run build",
     "build": "bun build ./src/cli.ts --outdir=dist --target=node --minify",
     "start": "bun dist/cli.js",
     "dev": "bun run ./src/cli.ts"
@@ -19,5 +20,17 @@
     "@biomejs/biome": "1.9.4",
     "@types/bun": "latest",
     "typescript": "^5.0.0"
-  }
+  },
+   "keywords": [
+    "ghostty",
+    "terminal",
+    "animation"
+  ],
+  "license": "MIT",
+  "repository": "https://github.com/SohelIslamImran/ghostty",
+  "bugs": {
+    "url": "https://github.com/SohelIslamImran/ghostty/issues"
+  },
+  "homepage": "https://github.com/SohelIslamImran/ghostty#readme",
+  "author": "SohelIslamImran <sohelislamimran@gmail.com> (https://github.com/SohelIslamImran)"
 }
