Add duration option to CLI for animation control
- Introduced a new command line argument '-t' or '--timer' to specify the duration for which the animation should run.
- Default duration is set to 0, allowing the animation to run indefinitely unless specified.
- Updated help command to include information about the new duration feature.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ghosttime",
-  "version": "1.1.0",
-  "description": "Ghostty animation for your terminal with customizable colors",
+  "version": "1.2.0",
+  "description": "Ghostty animation for any terminal with customizable colors",
   "module": "src/cli.ts",
   "type": "module",
   "bin": {
