Added new flag to not pause animation when not focused
# Add No Focus Pause Feature

## Description

This feature adds a new command line flag (`--no-focus-pause` or `-nf`)
that allows the animation to continue running even when the terminal
window loses focus. By default, the animation pauses when focus is lost,
but with this flag, users can opt for continuous animation regardless of
terminal focus state.

## Changes Made

- Added a new boolean variable `pauseOnFocusLoss` that defaults to
`true`
- Added a new command line flag `--no-focus-pause` (with shorthand
`-nf`)
- Updated the help text to document the new option
- Modified the focus handling logic to only track paused time when
`pauseOnFocusLoss` is true
- Updated the rendering condition to allow rendering even when the
terminal isn't focused if the `--no-focus-pause` flag is set

## How to Test

1. Run the application with the new flag:
   ```
   ghosttime --no-focus-pause
   ```
   or
   ```
   ghosttime -nf
   ```

2. Click away from the terminal to another window
3. Verify the animation continues running (whereas without the flag it
would pause)

--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "url": "https://github.com/SohelIslamImran/ghosttime/issues"
   },
   "homepage": "https://github.com/SohelIslamImran/ghosttime#readme",
-  "author": "SohelIslamImran <sohelislamimran@gmail.com> (https://github.com/SohelIslamImran)"
+  "author": "SohelIslamImran <sohelislamimran@gmail.com> (https://github.com/SohelIslamImran)",
+  "dependencies": {
+    "bun": "^1.2.4"
+  }
 }
