Removed bun from dependencies and updated README.md to include new no pause flag

--- a/package.json
+++ b/package.json
@@ -34,8 +34,5 @@
     "url": "https://github.com/SohelIslamImran/ghosttime/issues"
   },
   "homepage": "https://github.com/SohelIslamImran/ghosttime#readme",
-  "author": "SohelIslamImran <sohelislamimran@gmail.com> (https://github.com/SohelIslamImran)",
-  "dependencies": {
-    "bun": "^1.2.4"
-  }
+  "author": "SohelIslamImran <sohelislamimran@gmail.com> (https://github.com/SohelIslamImran)"
 }
