chore: Add release-it configuration and linting script
- Update package.json with release-it configuration for automated releases
- Add lint script using Biome
- Update Biome configuration to simplify file inclusion/exclusion
- Update TypeScript and add release-it as a dev dependency

--- a/biome.json
+++ b/biome.json
@@ -6,8 +6,8 @@
     "useIgnoreFile": false
   },
   "files": {
-    "include": ["src/**/*"],
-    "ignore": ["dist/**/*"]
+    "include": ["src"],
+    "ignore": ["dist"]
   },
   "formatter": {
     "enabled": true,
